fix content jump during transition

--- a/src/styles/pages/newprojects.scss
+++ b/src/styles/pages/newprojects.scss
@@ -175,6 +175,7 @@ $animation-duration: 0.3s;
         display: flex;
         flex-direction: column;
         height: 100%;
+        max-height: 450px;
         transition: color $animation-duration ease-in-out;
         .shots {
           user-select: none;
@@ -186,6 +187,7 @@ $animation-duration: 0.3s;
           margin-top: 0.25em;
           overflow: hidden;
           height: 140px;
+          min-height: 140px;
           width: 100%;
           .swiper {
             height: 140px;
@@ -255,6 +257,7 @@ $animation-duration: 0.3s;
       }
       .info {
         height: 10em;
+        overflow: hidden;
         margin-top: 2em;
         grid-area: info;
         .info-container {
